syntax = "proto3";

// ServiÃ§os
service TaskService {
   rpc FindAll(Empty) returns(TaskList) { }
   rpc InsertOne(Task) returns(Task) { }
   rpc FindOne(TaskResquest) returns(Taks) { }
   rpc DeleteOne(Task) returns(Taks) { }
}

// Mensagens 
mensage Empty{ }

mensage Task {
    int32 id = 1
    string title = 2
}

mensage TaskList{
  repeated Task tasks = 1
}

mensage TaskResquest{
    int32 id = 1
}